--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <h1>Welcome to the Home of the Philadelphia Phillies!</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Philadelphia_Phillies_Insignia.svg/1200px-Philadelphia_Phillies_Insignia.svg.png" alt="Phillies Logo">
+    <img src="https://www.mlbstatic.com/team-logos/143.svg" alt="Phillies Logo">
     <p>The Philadelphia Phillies are one of baseball's most legendary teams, with a storied history, iconic players, and a fan base like no other. From memorable wins to heart-stopping moments, the Phillies represent the grit and determination of Philadelphia.</p>
     <p>As a member of the National League East, the Phillies have brought pride to the city of Philadelphia, and their home games at Citizens Bank Park are an electrifying experience.</p>
     <p>Let's Go Phillies! Thank you for visiting, and remember – the Phillies are more than a team; they're a legacy.</p>
